fixed some spacing under the header

--- a/content/themes/pg2014/assets/css/_header.less
+++ b/content/themes/pg2014/assets/css/_header.less
@@ -16,7 +16,7 @@
 }
 .page-title {
   .u-align-center;
-  margin: 0;
+  margin: 0.25em 0;
 }
 .nav-list {
    list-style-type: none;
