--- a/content/themes/pg2014/assets/css/main.less
+++ b/content/themes/pg2014/assets/css/main.less
@@ -53,6 +53,9 @@ svg:hover path {
 }
 .content-container {
   padding: 1em;
+  min-height: 100vh;
+  // background-image: repeating-linear-gradient(135deg, #e7e7e9, #e7e7e9 15px, #dcdddf 15px, #dcdddf 20px);
+  // background: transparent url("../images/pg-background.jpg") 0 0 repeat;
   .bp(sm, {
     margin-left: @sidebar-width;
   });
@@ -62,6 +65,7 @@ svg:hover path {
   max-width: 17em;
   display: block;
   margin: auto;
+  line-height: 0;
 }
 code:not([class*=language-]), tt {
   font-size: 0.85em;
